tests/ui/uninhabited/uninhabited-pin-field.stderr
error[E0004]: non-exhaustive patterns: type `Pin<Void>` is non-empty
  --> $DIR/uninhabited-pin-field.rs:6:11
   |
LL |     match x {}
   |           ^
   |
note: `Pin<Void>` defined here
  --> $SRC_DIR/core/src/pin.rs:LL:COL
   = note: the matched value is of type `Pin<Void>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
